--- a/spring-foundations/programmer-app-java-based-config/pom.xml
+++ b/spring-foundations/programmer-app-java-based-config/pom.xml
@@ -9,12 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>core-HW</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>coffee-machine-java-based-configuration</module>
-        <module>coffee-machine-xml-config</module>
-    </modules>
+    <artifactId>programmer-app-java-based-config</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -29,5 +24,6 @@
         </dependency>
 
     </dependencies>
+
 
 </project>
