--- a/spring-foundations/pom.xml
+++ b/spring-foundations/pom.xml
@@ -15,6 +15,7 @@
         <module>core-java-based</module>
         <module>programmer-app-java-based-config</module>
         <module>core-annotation-based</module>
+        <module>programmer-app-annotation-based-config</module>
     </modules>
 
     <properties>
