--- a/spring-foundations/pom.xml
+++ b/spring-foundations/pom.xml
@@ -16,6 +16,7 @@
         <module>programmer-app-java-based-config</module>
         <module>core-annotation-based</module>
         <module>programmer-app-annotation-based-config</module>
+        <module>lifecycle-and-beans-scope</module>
     </modules>
 
     <properties>
