--- a/spring-foundations/aop/pom.xml
+++ b/spring-foundations/aop/pom.xml
@@ -9,14 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>core-HW</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>coffee-machine-java-based-configuration</module>
-        <module>coffee-machine-xml-config</module>
-        <module>coffee-machine-annotation-based-config</module>
-        <module>aop-coffee-machine</module>
-    </modules>
+    <artifactId>aop</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -29,6 +22,21 @@
             <artifactId>spring-context</artifactId>
             <version>5.2.19.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.7</version>
+        </dependency>
+
+        <dependency>
+            <groupId>aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>1.5.4</version>
+        </dependency>
+
+
+
 
     </dependencies>
 
