--- a/spring-foundations/core-HW/aop-coffee-machine/pom.xml
+++ b/spring-foundations/core-HW/aop-coffee-machine/pom.xml
@@ -3,20 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>spring-foundations</artifactId>
+        <artifactId>core-HW</artifactId>
         <groupId>ru.itsjava</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>core-HW</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>coffee-machine-java-based-configuration</module>
-        <module>coffee-machine-xml-config</module>
-        <module>coffee-machine-annotation-based-config</module>
-        <module>aop-coffee-machine</module>
-    </modules>
+    <artifactId>aop-coffee-machine</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -25,9 +18,21 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>5.2.19.RELEASE</version>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.7</version>
+        </dependency>
+
+        <dependency>
+            <groupId>aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>1.5.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
         </dependency>
 
     </dependencies>
