--- a/spring-boot/spring-boot-jpa-foundations/src/main/resources/application.yaml
+++ b/spring-boot/spring-boot-jpa-foundations/src/main/resources/application.yaml
@@ -5,6 +5,6 @@ spring:
     hibernate:
       ddl-auto: none
     generate-ddl: false
-    properties:
-      hibernate:
-        default_schema: schema.sql
+#    properties:
+#      hibernate:
+#        default_schema: schema.sql
